--- a/src/components/myArt/myArt.css
+++ b/src/components/myArt/myArt.css
@@ -1,15 +1,20 @@
 .container.testimonials__container {
   width: 40%;
   padding-bottom: 4rem;
+  cursor: pointer;
 }
 
 .client__avatar {
-  width: 4rem;
-  aspect-ratio: 1/1;
+  width: 100%;
+
   overflow: hidden;
-  border-radius: 50%;
   margin: 0 auto 1rem;
   border: 0.4rem solid var(--color-primary-variant);
+}
+
+.client__avatar img {
+  width: 100%;
+  height: 80%;
 }
 
 .testimonial {
