--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -14,8 +14,8 @@
 
 .service:hover {
   background: transparent;
-  border-color: var(--color-primary-variant);
-  cursor: default;
+  border-color: transparent;
+  cursor: pointer;
 }
 
 .service__head {
@@ -23,6 +23,12 @@
   padding: 2rem;
   border-radius: 0 0 2rem 2rem;
   box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.service__head:hover {
+  background-color: var(--color-bg-variant);
+  transform: scaleY(1);
+  transition: 0.4s ease-in-out;
 }
 
 .service__head h3 {
