adding animated background

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -31,3 +31,11 @@ nav a.active {
   background: var(--color-primary);
   color: var(--color-bg);
 }
+
+@media screen and (max-width: 414px) {
+  nav {
+    left: 40%;
+    transform: translateX(-50%);
+    bottom: 2rem;
+  }
+}
