--- a/src/UI/animatedBG.css
+++ b/src/UI/animatedBG.css
@@ -2,7 +2,7 @@
 
 .area {
   background: #0d1046;
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  background: -webkit-linear-gradient(to left, #0d1046, #4e54c8);
   width: 100%;
   height: fit-content;
   position: absolute;
@@ -40,7 +40,7 @@
   left: 10%;
   width: 20px;
   height: 20px;
-  animation-delay: 2s;
+  animation-delay: 0s;
   animation-duration: 12s;
 }
 
@@ -48,7 +48,7 @@
   left: 70%;
   width: 20px;
   height: 20px;
-  animation-delay: 4s;
+  animation-delay: 0s;
 }
 
 .circles li:nth-child(4) {
@@ -70,21 +70,21 @@
   left: 75%;
   width: 110px;
   height: 110px;
-  animation-delay: 3s;
+  animation-delay: 0s;
 }
 
 .circles li:nth-child(7) {
   left: 35%;
   width: 150px;
   height: 150px;
-  animation-delay: 7s;
+  animation-delay: 0s;
 }
 
 .circles li:nth-child(8) {
   left: 50%;
   width: 25px;
   height: 25px;
-  animation-delay: 15s;
+  animation-delay: 2s;
   animation-duration: 45s;
 }
 
@@ -115,5 +115,12 @@
     transform: translateY(-1000px) rotate(720deg);
     opacity: 0;
     border-radius: 50%;
+  }
+}
+
+/* ================ MEDIA QUERIES (X SMALL DEVICES) ================= */
+@media screen and (max-width: 414px) {
+  .circles {
+    width: 60%;
   }
 }
