--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,8 +14,13 @@ header {
 .cta {
   margin-top: 2.5rem;
   display: flex;
-  gap: 1.2rem;
+
   justify-content: center;
+}
+
+.cta > a {
+  margin-left: 0.6rem;
+  margin-right: 0.6rem;
 }
 
 /* =============== HEADER SOCIALS ============== */
@@ -76,7 +81,6 @@ header {
 @media screen and (max-width: 600px) {
   header {
     height: 100vh;
-    /* added after tutorial */
     padding-top: 4rem;
   }
 
@@ -85,7 +89,6 @@ header {
     display: none;
   }
 
-  /* added after tutorial */
   .me {
     width: 94%;
     max-width: 20rem;
@@ -93,7 +96,6 @@ header {
     justify-content: center;
   }
 
-  /* added after tutorial */
   .cta {
     margin-top: 1.7rem;
     gap: 1rem;
