--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -15,10 +15,12 @@
 .portfolio__item:hover {
   border-color: var(--color-primary-variant);
   background: transparent;
+  cursor: pointer;
 }
 
 .portfolio__item-image {
   border-radius: 1.5rem;
+  max-height: 28vh;
   overflow: hidden;
 }
 
@@ -28,8 +30,13 @@
 
 .portfolio__item-cta {
   display: flex;
-  gap: 1rem;
   margin-bottom: 1rem;
+  align-content: center;
+  justify-content: center;
+}
+
+.portfolio__item-cta > a {
+  margin: 0 0.5rem;
 }
 
 /* ================ MEDIA QUERIES (MEDIUM DEVICES) ================= */
