--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -9,9 +9,13 @@ nav {
   transform: translateX(-50%);
   bottom: 2rem;
   display: flex;
-  gap: 0.8rem;
   border-radius: 3rem;
   backdrop-filter: blur(15px);
+}
+
+nav > a {
+  margin-left: 0.4rem;
+  margin-right: 0.4rem;
 }
 
 nav a {
