--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -21,15 +21,21 @@ footer a {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
   margin: 0 auto 3rem;
+}
+
+.permalinks > li {
+  margin: 0 0.5rem;
 }
 
 .footer__socials {
   display: flex;
   justify-content: center;
-  gap: 1rem;
   margin-bottom: 4rem;
+}
+
+.footer__socials > a {
+  margin: 0 0.5rem;
 }
 
 .footer__socials a {
