--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -50,7 +50,7 @@ header {
   left: 50%;
   transform: translateX(-50%);
   margin-top: 4rem;
-  border-radius: 12rem 12rem 0 0;
+  border-radius: 6rem 6rem 6em 6rem;
   overflow: hidden;
   padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
