--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -41,13 +41,12 @@
 }
 
 .error_message {
-  color: red;
+  color: rgb(224, 61, 61);
   font-size: 0.8rem;
 }
 
 .success_message {
-  color: green;
-  font-size: 1rem;
+  color: rgb(83, 233, 83);
 }
 
 /* ================= FORM ================== */
@@ -62,6 +61,17 @@ form > input {
 
 form > button {
   margin-top: 1.2rem;
+}
+
+.btn-disabled {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-light);
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition);
 }
 
 input,
