adding gifs in the services component

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -37,6 +37,16 @@
   text-align: center;
 }
 
+.service__body {
+  padding: 1rem;
+  border-radius: 2rem 2rem 2rem 2rem;
+  box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+.service__body > img {
+  border-radius: 1rem;
+}
+
 .service__list {
   padding: 2rem;
 }
