--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -32,12 +32,12 @@
 
 .experience__details {
   display: flex;
-  gap: 1rem;
 }
 
 .experience__details-icon {
   margin-top: 6px;
   color: var(--color-primary);
+  margin-right: 1em;
 }
 
 .br_mobile {
@@ -51,20 +51,17 @@
   }
 
   .experience__container > div {
-    width: 80%;
-    padding: 2rem;
     margin: 0 auto;
   }
 
   .experience__content {
-    padding: 1rem;
+    padding: 0.5rem;
   }
 }
 
 /* ================ MEDIA QUERIES (SMALL DEVICES) ================= */
 @media screen and (max-width: 600px) {
   .experience__container {
-    gap: 1rem;
   }
 
   .experience__container > div {
