--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -41,6 +41,7 @@
   padding: 1rem;
   border-radius: 2rem 2rem 2rem 2rem;
   box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
+  transition: ease-in-out;
 }
 
 .service__body > img {
