--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -45,19 +45,19 @@ header {
 .me {
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
-  height: 30rem;
+  height: fit-content;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   margin-top: 4rem;
   border-radius: 6rem 6rem 6em 6rem;
   overflow: hidden;
-  padding: 5rem 1.5rem 1.5rem 1.5rem;
+  padding: 1.5rem 1.5rem 1.5rem 1.5rem;
 }
 
 .me img {
-  width: 20rem;
-  height: unset;
+  width: 100%;
+  border-radius: 6rem 6rem 6em 6rem;
 }
 
 /* =============== SCROLL DOWN ============== */
