--- a/src/UI/modal.css
+++ b/src/UI/modal.css
@@ -14,7 +14,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  width: 650px;
+
   max-width: 1000px;
   border-radius: 5px;
   padding: 20px;
