--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -67,7 +67,7 @@ form > button {
 .btn-disabled {
   width: max-content;
   display: inline-block;
-  color: var(--color-light);
+  color: grey;
   padding: 0.75rem 1.2rem;
   border-radius: 0.4rem;
   cursor: pointer;
